Exclude global styles from the review app

--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -2,5 +2,9 @@
 // right corner of your site during development, add the breakpoints
 // to this list, ordered by width, e.g. (mobile, tablet, desktop).
 $mq-show-breakpoints: (mobile, tablet, desktop);
+
+// dont use global <a> and <p> styles
+$govuk-global-styles: false;
+
 @import "../../../src/all/all";
 @import "partials/app";
