Change grid classes and create mixins

--- a/src/globals/objects/_grid.scss
+++ b/src/globals/objects/_grid.scss
@@ -1,53 +1,107 @@
-@mixin govuk-grid {
-  @include govuk-clearfix;
-  margin-right: - ($govuk-gutter-half);
-  margin-left: - ($govuk-gutter-half);
+// default map of avaialble grid widths
+$grid-widths: (
+  one-quarter: 25%,
+  one-third: 33.3333%,
+  one-half: 50%,
+  two-thirds: 66.6666%,
+  three-quarters: 75%,
+  full: 100%
+) !default;
+
+// helper funtion to get the value from map
+@function grid-width($key) {
+  @if map-has-key($grid-widths, $key) {
+    @return map-get($grid-widths, $key);
+  }
+
+  @warn "Unknown `#{$key}` in $grid-width.";
+  @return null;
 }
 
-@mixin govuk-grid-item {
-  box-sizing: border-box;
-  padding: 0 $govuk-gutter-half;
+// A mixin for a grid row
+// Creates a grid row with a standardised margin.
+// Usage:
+// Default:
+// @include @include govuk-grid()
+//
+// Provide a custom grid class:
+// @include govuk-grid("app-grid");
 
-  @include mq($from: tablet) {
-    float: left;
+@mixin govuk-grid($class: null) {
+  $class: "govuk-grid-row" !default;
+
+  .#{$class} {
+    @include govuk-clearfix;
+    margin-right: - ($govuk-gutter-half);
+    margin-left: - ($govuk-gutter-half);
   }
 }
 
-@include govuk-exports("grid") {
+// A mixin for a grid column
+// Creates a cross browser grid column with a class of '.govuk-grid' by default
+// and a standardised gutter between the columns.
+// Common widths are predfined above as keywords.
+// By default their width chnages from 100% to specified with at table breakpoint,
+// but that can be configured to be desktop using the `$at` argument.
+//
+// Arguments:
+// @param $class: "govuk-grid" = default | String
+// @param $width = one-quarter | one-third | one-half | two-third | three-quarters | full
+// @param $float: left (default) | right
+// @param $at = mobile | tablet | desktop | any custom as defined in mq breakpoints
+//
+// Usage:
+// Default:
+// @include govuk-grid-col(two-thirds)
+//
+// Custom class:
+// @include govuk-grid-col(one-half, $class: "test-col");
+//
+// Change breakpoint where width percentage is applied:
+// @include govuk-grid-col(one-half, $at: desktop);
+//
+// Change float direction:
+// @include govuk-grid-col(one-half, $float: right);
 
-  .govuk-grid {
-    @include govuk-grid;
-  }
+@mixin govuk-grid-col(
+  $width: null,
+  $float: null,
+  $at: null,
+  $class: null) {
 
-  .govuk-grid__item {
-    @include govuk-grid-item;
-  }
+  $class: "govuk-grid-col" !default;
 
-  .govuk-grid__item--full {
-    width: 100%;
-  }
+  $width: if($width != null, $width, full);
+  $float: if($float != null, $float, left) !default;
+  $at: if($at != null, $at, tablet) !default;
 
-  .govuk-grid__item--one-half {
-    @include mq($from: tablet) {
-      width: percentage(1 / 2);
+
+  .#{$class}-#{$width} {
+    box-sizing: border-box;
+    @if $at != desktop {
+      width: 100%;
+    }
+    padding: 0 $govuk-gutter-half;
+    @include mq($from: $at) {
+      width: grid-width($width);
+      float: $float;
     }
   }
+}
 
-  .govuk-grid__item--one-third {
-    @include mq($from: tablet) {
-      width: percentage(1 / 3);
-    }
-  }
+@include govuk-exports("govuk-grid") {
+  // most common usage
+  @include govuk-grid;
+  @include govuk-grid-col(one-quarter);
+  @include govuk-grid-col(one-third);
+  @include govuk-grid-col(one-half);
+  @include govuk-grid-col(two-thirds);
+  @include govuk-grid-col(three-quarters);
+  @include govuk-grid-col(full);
 
-  .govuk-grid__item--two-thirds {
-    @include mq($from: tablet) {
-      width: percentage(2 / 3);
-    }
-  }
+  // custom 100,66,75%
+  @include govuk-grid-col(three-quarters, $at: desktop, $class: "on-desktop");
 
-  .govuk-grid__item--one-quarter {
-    @include mq($from: tablet) {
-      width: percentage(1 / 4);
-    }
-  }
+  // custom 100,33,25%
+  @include govuk-grid-col(one-quarter, $at: desktop, $class: "on-desktop");
 }
