Update grid example

--- a/app/views/examples/grid/index.njk
+++ b/app/views/examples/grid/index.njk
@@ -11,68 +11,80 @@
 
 <main id="content" role="main" class="govuk-main-wrapper">
   <h1 class="govuk-heading-l">Example: Grid layout</h1>
-  <div class="govuk-grid">
-    <div class="govuk-grid__item govuk-grid__item--two-thirds">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-col-two-thirds">
       <h2 class="govuk-heading-m">Two thirds</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-third">
+    <div class="govuk-grid-col-one-third">
       <h2 class="govuk-heading-m">One third</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-third">
+    <div class="govuk-grid-col-one-third">
       <h2 class="govuk-heading-m">One third</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-third">
+    <div class="govuk-grid-col-one-third">
       <h2 class="govuk-heading-m">One third</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-third">
+    <div class="govuk-grid-col-one-third">
       <h2 class="govuk-heading-m">One third</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-half">
+    <div class="govuk-grid-col-one-half">
       <h2 class="govuk-heading-m">One half</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-half">
+    <div class="govuk-grid-col-one-half">
       <h2 class="govuk-heading-m">One half</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-quarter">
+    <div class="govuk-grid-col-one-quarter">
       <h2 class="govuk-heading-m">One quarter</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-quarter">
+    <div class="govuk-grid-col-one-quarter">
       <h2 class="govuk-heading-m">One quarter</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-quarter">
+    <div class="govuk-grid-col-one-quarter">
       <h2 class="govuk-heading-m">One quarter</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
       </p>
     </div>
-    <div class="govuk-grid__item govuk-grid__item--one-quarter">
+    <div class="govuk-grid-col-one-quarter">
+      <h2 class="govuk-heading-m">One quarter</h2>
+      <p class="govuk-body">
+        This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
+      </p>
+    </div>
+    <div class="govuk-grid-col-three-quarters">
+      <h2 class="govuk-heading-m">Three-quarters</h2>
+      <p class="govuk-body">
+        This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
+      </p>
+    </div>
+    <div class="govuk-grid-col-one-quarter">
       <h2 class="govuk-heading-m">One quarter</h2>
       <p class="govuk-body">
         This guide shows how to make your service look consistent with the rest of GOV.UK. It includes example code and guidance for layout, typography, colour, images, icons, forms, buttons and data.
